--- a/src/services.html
+++ b/src/services.html
@@ -166,11 +166,12 @@
     					<h2>Navigation</h2>
     				</div>
     				<ul class="style2">
-    					<li><a href="#">Home</a></li>
-    					<li><a href="#">About</a></li>
-    					<li><a href="#">Contacts</a></li>
-    					<li><a href="#">Donations</a></li>
-    					<li><a href="#">Services</a></li>
+    					<li><a href="index.html">Home</a></li>
+    					<li><a href="about.html">About</a></li>
+    					<li><a href="contact.html">Contacts</a></li>
+    					<li><a href="donate.html">Donations</a></li>
+    					<li><a href="services.html">Services</a></li>
+						<li><a href="sponsors.html">Sponsors</a></li>
     				</ul>
     			</div>
     			<div class="box2">
