--- a/src/services.html
+++ b/src/services.html
@@ -27,6 +27,9 @@
             </div>
           </div>
     		</div>
+			
+			<!-- Navbar -->
+			
     		<div class="navbar">
           <ul id="navbar" class="navbar">
             <li class="navbar"><a href="index.html">Home</a></li>
@@ -46,22 +49,9 @@
     					<span class="byline">Act for Kids proudly offers a range of support services to both children and their families!</span> </div>
     				<span class="image image-full"><img src="images/HelpingChildren.jpg" alt="" /></span>
     				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different service ranging from therapy from abuse and neglect trauma to providing safe homes for those under child protection orders.</p>
-    			</div>
-
-
-
-
-
-				<!-- Services -->
-				<!-- Services -->
-
-
-
-
+    			</div
 
 				<!-- Integrated Therapy Services -->
-
-
 
     			<div class="article">
     				<div class="title">
@@ -85,11 +75,7 @@
 					</ul>
     			</div>
 
-
-
 				<!-- Intensive Family Support -->
-
-
 
 				<div class="article">
     				<div class="title">
@@ -113,11 +99,7 @@
 					</ul>
     			</div>
 
-
-
 				<!-- Early Education Program -->
-
-
 
 				<div class="article">
     				<div class="title">
@@ -131,11 +113,7 @@
 					<p>A registered teacher develops individual learning plans for each child to ensure they reach their full potential. Children also receive support from a multi-disciplinary team of practitioners that can include psychologists, speech and language pathologists, occupational therapists, nurses, social workers and like disciplines. The program works with the parents, caregivers and other family members to help ensure the child is safe and happy and that they experience positive early development and interventions.</p>
     			</div>
 
-
-
 				<!-- SafeKIDS -->
-
-
 
 				<div class="article">
     				<div class="title">
@@ -149,16 +127,7 @@
     			</div>
     		</div>
 
-
-
-
-
 			<!--- Side Bar -->
-			<!--- Side Bar -->
-
-
-
-
 
     		<div id="sidebar">
     			<div class="box1">
