--- a/src/support.html
+++ b/src/support.html
@@ -38,7 +38,7 @@
     	</div>
       <div id="page">
     		<div id="content">
-          <div id="title">
+          <div class="title">
             <h1>Support The Development Team!</h1>
             <p>Thanks for browsing through our site, we hope you enjoyed it. All this was made possible thanks to the brlliant developers from the Iron Squad at QAT. Feel free to help us out by donating to the induviduals who put this site together. Thanks for your support :)
           </div>
@@ -47,33 +47,33 @@
   					  <tr>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\matt.jpg" alt="" /></a>
-                  <h3>Matt Llamas:</h3>
+                  <h3>Matt Llamas</h3>
                   <p>GitHub co-ordinator<a href="media/clip/gits.mp4">,</a> mainframe and backend designer</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\cayton.jpg" alt="" /></a>
-                  <h3>Cayton Browne:</h3>
+                  <h3>Cayton Browne</h3>
                   <p>Page designer, styling specialist and template analyst</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"/><img src="images\developers\parth.jpg" alt="" /></a>
-                  <h3>Parth Vijaydhar:</h3>
+                  <h3>Parth Vijaydhar</h3>
                   <p>Page designer and wireframming developer</p>
                 </td>
               </tr>
               <tr>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\anthony.jpg" alt="" /></a>
-                  <h3>Anthony Calvillo:</h3>
+                  <h3>Anthony Calvillo</h3>
                   <p>Page designer, donations manager and site map integrator</p>
                 </td><td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\josh.jpg" alt="" /></a>
-                  <h3>Joshua Deckert:</h3>
+                  <h3>Joshua Deckert</h3>
                   <p>Page designer, sponsorship co-ordinator</p>
                 </td>
                 <td>
                   <a href="https://www.paypal.me/mattllamas/50"><img src="images\developers\daniel.jpg" alt="" /></a>
-                  <h3>Daniel Zantho:</h3>
+                  <h3>Daniel Zantho</h3>
                   <p>Team leader, page and graphic designer</p>
                 </td>
               </tr>
