--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -31,7 +31,7 @@
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donations</a></li>
             <li><a href="services.html">Services</a></li>
-			<li><a class="current_page" href="sponsors.html">Sponsors</a></li>
+			      <li><a class="current_page" href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
         <embed src="media/rddi.mp3" loop="true" autostart="false" hidden="false" />
@@ -39,41 +39,41 @@
     	<div id="page">
     		<div id="content">
   				<div class="title">
-				<center><h2>Our corporate partners and sponsors</center></h2>
-				<p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
-					  <h2 style="text-align: center;">Official Partners</h2>
+    				<h1>Our corporate partners and sponsors</h1>
+    				<p>Our generous sponsors give us so much more than money; many also provide pro-bono services and help us spread our message far and wide. Many of their amazing staff also volunteer to help us when we need an extra set of hands.</p>
+  				  <h1>Official Partners</h1>
 				  </div>
           <div class="sponsor-grid">
-            <table border="2">
+            <table>
   					  <tr>
                 <td><a href="http://www.publicis.com.au/"><img src="images\sponsor_logos\logo_08.jpg" alt="" /></a></td>
-  				<td><a href="http://www.australia.gov.au/"/><img src="images\sponsor_logos\logo_14.jpg" alt="" /></a></td>
-  				<td><a href="https://actrua.com.au/"/><img src="images\sponsor_logos\logo_17.jpg" alt="" /></a></td>
+        				<td><a href="http://www.australia.gov.au/"><img src="images\sponsor_logos\logo_14.jpg" alt="" /></a></td>
+        				<td><a href="https://actrua.com.au/"><img src="images\sponsor_logos\logo_17.jpg" alt="" /></a></td>
               </tr>
   						<tr>
-                <td><a href="http://www.subway.com/en-au"/><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a></td>
-  				<td><a href="http://www.danielmorcombe.com.au/"/><img src="images\sponsor_logos\logo_26.jpg" alt="" /></a></td>
-  				<td><img src="images\sponsor_logos\logo_29.jpg" alt="" /></td>
+                <td><a href="http://www.subway.com/en-au"><img src="images\sponsor_logos\logo_20.jpg" alt="" /></a></td>
+        				<td><a href="http://www.danielmorcombe.com.au/"><img src="images\sponsor_logos\logo_26.jpg" alt="" /></a></td>
+        				<td><img src="images\sponsor_logos\logo_29.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td><a href="http://futuregeninvest.com.au/"/><img src="images\sponsor_logos\logo_38.jpg" alt="" /></a></td>
-  				<td><a href="http://www.vita-foundation.com.au/"/><img src="images\sponsor_logos\logo_42.jpg" alt="" /></a></td>
-  				<td><a href="https://www.budgetdirect.com.au/"><img src="images\sponsor_logos\logo_45.jpg" alt="" /></a></td>
+                <td><a href="http://futuregeninvest.com.au/"><img src="images\sponsor_logos\logo_38.jpg" alt="" /></a></td>
+        				<td><a href="http://www.vita-foundation.com.au/"><img src="images\sponsor_logos\logo_42.jpg" alt="" /></a></td>
+        				<td><a href="https://www.budgetdirect.com.au/"><img src="images\sponsor_logos\logo_45.jpg" alt="" /></a></td>
               </tr>
   						<tr>
-                <td><a href="http://www.mbbrisbane.com.au/en/desktop/home.html"/><img src="images\sponsor_logos\logo_48.jpg" alt="" /></a></td>
-  				<td><a href="https://zarraffas.com/"/><img src="images\sponsor_logos\logo_54.jpg" alt="" /></a></td>
-  				<td><img src="images\sponsor_logos\logo_57.jpg" alt="" /></td>
+                <td><a href="http://www.mbbrisbane.com.au/en/desktop/home.html"><img src="images\sponsor_logos\logo_48.jpg" alt="" /></a></td>
+        				<td><a href="https://zarraffas.com/"><img src="images\sponsor_logos\logo_54.jpg" alt="" /></a></td>
+        				<td><img src="images\sponsor_logos\logo_57.jpg" alt="" /></td>
               </tr>
   						<tr>
-                <td><a href="https://connecttelnorth.com.au/"/><img src="images\sponsor_logos\logo_60.jpg" alt="" /></a></td>
-                <td><a href="http://physikids.com.au/"/><img src="images\sponsor_logos\logo_66.jpg" alt="" /></a></td>
-  				<td><a href="http://www.capitolbca.com.au/"/><img src="images\sponsor_logos\logo_69.jpg" alt="" /></a></td>
+                <td><a href="https://connecttelnorth.com.au/"><img src="images\sponsor_logos\logo_60.jpg" alt="" /></a></td>
+                <td><a href="http://physikids.com.au/"><img src="images\sponsor_logos\logo_66.jpg" alt="" /></a></td>
+        				<td><a href="http://www.capitolbca.com.au/"><img src="images\sponsor_logos\logo_69.jpg" alt="" /></a></td>
               </tr>
   						<tr>
-                <td><a href="http://www.smartline.com.au/"/><img src="images\sponsor_logos\logo_72.jpg" alt="" /></a></td>
-                <td><a href="http://www.katrinachrist.com.au/"/><img src="images\sponsor_logos\logo_75.jpg" alt="" /></a></td>
-  				<td><a href="http://www.lilleybuild.com.au/"/><img src="images\sponsor_logos\logo_82.jpg" alt="" /></a></td>
+                <td><a href="http://www.smartline.com.au/"><img src="images\sponsor_logos\logo_72.jpg" alt="" /></a></td>
+                <td><a href="http://www.katrinachrist.com.au/"><img src="images\sponsor_logos\logo_75.jpg" alt="" /></a></td>
+        				<td><a href="http://www.lilleybuild.com.au/"><img src="images\sponsor_logos\logo_82.jpg" alt="" /></a></td>
               </tr>
             </table>
           </div>
